# app/routes/index.js
@@ -9,13 +9,10 @@ const {
   authorizeAdmin,
 } = require("../../middlewares/userAuthMiddleware");
 
-// Group routes directly under /api path
 router.use("/", publicApiRoutes);
 
-// Group routes under /api/admin path
 router.use("/admin", authorizeAdmin, adminRoutes);
 
-// Group routes under /api/user path
 router.use("/user", authorize, userRoutes);
 
 module.exports = router;
